--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "lite-server": "^2.5.4"
     },
     "dependencies": {
-        "bootstrap": "^4.5.3"
+        "bootstrap": "^4.5.3",
+        "bootstrap-social": "^5.1.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.3.1",
+        "popper.js": "^1.12.9"
     }
 }
